--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -6,57 +6,71 @@
     <title>{% block title %}Vermont Public Radio{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{% block description %}{{ social.description }}{% endblock %}">
+    <meta name="author" content="Matthew Parrilla, VPR, @mattparrilla">
+
+    {% if social %}
+    <meta property="og:description" content="{{ social.description }}" />
+    <meta property="fb:admins" content="5735853" />
+    <meta property="og:title" content="{{ social.title }}" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="{{ social.img }}" />
+    <meta property="og:url" content="{{ page_url }}" />
+    <meta property="og:site_name" content="Vermont Public Radio" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@vprnet">
+    <meta name="twitter:title" content="{{ social.title }}">
+    <meta name="twitter:description" content="{{ social.description }}">
+    <meta name="twitter:creator" content="@mattparrilla">
+    <meta name="twitter:image:src" content="{{ social.img }}">
+    {% endif %}
 
     <!-- Styles -->
-{% block style %}
+    {% block bootstrap %}
+    {% endblock %}
+    {% block style %}
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
-{% endblock %}
-
-
-
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.js"></script>
-    <![endif]-->
-
+    {% endblock %}
     <!-- Fav and touch icons -->
     <link rel="shortcut icon" href="{{ url_for('static', filename='ico/favicon.ico') }}">
-
-{% include "_social.html" %}
-{% include "_underwriter_script.html" %}
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-<!-- Jquery used by below anayltics code -->
-{% include "_analytics.html" %}
 
 </head>
 
 <body>
 
-<div id="page_container">
-{% block navbar %}{% include "_navbar.html" %}{% endblock %}
-
-{% block content %}{% endblock %}
-</div>
-
-{% block footer %}
-<footer>
+{% block iframe %}
+<nav class="navbar navbar-fixed-top" role="navigation">
     <div class="container">
-        <p><span class="hidden-xs" id="vpr_address">Vermont Public Radio // 365 Troy Avenue // Colchester, VT 05446 // (802) 655-9451</span> <span id="copyright">&copy; Vermont Public Radio 2014</span></p>
-    </div>
-</footer>
+        <div class="navbar-header">
+            <a id="link-home" class="navbar-brand" href="http://www.vpr.net">
+                <div id="vpr-logo"></div></a>
+            <p id="navbar-title">{% block header_title %}VPR Template{% endblock %}</p>
+            {% if social %}
+            <div id="social-logos">
+                <a href="https://plus.google.com/share?url={{ page_url|urlencode }}" target="_blank">
+                    <div id="google_icon" target="_blank"></div></a>
+                <a href="http://www.twitter.com/intent/tweet?url={{ page_url|urlencode }}&text={{ social.twitter_text|urlencode }}&via=vprnet&hashtags={{ social.twitter_hashtag|urlencode }}" target="_blank">
+                    <div id="twitter_icon"></div></a>
+                <a href="https://www.facebook.com/dialog/feed?app_id=282283015178&picture={{ social.img|urlencode }}&name={{ social.title|urlencode }}&caption={{ social.subtitle|urlencode }}&description={{ social.description|urlencode }}&redirect_uri={{ page_url|urlencode }}" target="_blank">
+                    <div id="facebook_icon"></div></a>
+            </div>
+            {% endif %}
+        </div>
+</nav>
+
+<div id="body" class="container">
+    {% block content %}{% endblock %}
+
+    <footer> <p>&copy; Vermont Public Radio 2013</p> </footer>
+
+</div> <!-- /container -->
 {% endblock %}
 
-
-{% block scripts %}
-{% endblock %}
-
-{% block grunt %}
-<script src="//localhost:35729/livereload.js"></script>
-<script type='text/javascript'>//<![CDATA[
-;document.write("<script defer src='//HOST:3000/socket.io/socket.io.js'><\/script><script defer src='//HOST:3001/client/browser-sync-client.0.9.1.js'><\/script>".replace(/HOST/g, location.hostname));
-//]]></script>
-{% endblock %}
-
+    <!-- Scripts
+    ================================================== -->
+    {% block scripts %}
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-wip/js/bootstrap.min.js"></script>
+    {% endblock %}
 
 </body>
 </html>
